crates/ts/tests/snapshots/baseline_diff__baseline_parameter_made_optional.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: "Changed(Parameter { name: \"a\" })"
  is_breaking: false
  description: "Parameter `a` of `f` was made optional"
  before: required
  after: optional
  has_migration_target: false
