crates/ts/tests/snapshots/baseline_diff__baseline_parameter_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: ParameterRemoved
  is_breaking: true
  description: "Parameter `b` was removed from `f`"
  before: "b: number"
  after: ~
  has_migration_target: false
