crates/ts/tests/snapshots/baseline_diff__baseline_parameter_type_changed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: "Changed(Parameter { name: \"a\" })"
  is_breaking: true
  description: "Parameter `a` of `f` changed type from `string` to `number`"
  before: string
  after: number
  has_migration_target: false
