crates/ts/tests/snapshots/baseline_diff__baseline_promoted_from_deprecated_not_breaking.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Modal
  qualified_name: pkg/dist/esm/deprecated/components/Modal/Modal.Modal
  kind: Variable
  change_type: "Added(Symbol { kind: Variable })"
  is_breaking: false
  description: "variable `Modal` promoted from deprecated to main exports"
  before: pkg/dist/esm/deprecated/components/Modal/Modal.Modal
  after: pkg/dist/esm/components/Modal/Modal.Modal
  has_migration_target: false
