crates/ts/tests/snapshots/baseline_diff__baseline_property_renamed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: isActive
  qualified_name: ButtonProps.isActive
  kind: Property
  change_type: "Renamed { from: Member { name: \"isActive\", kind: Property }, to: Member { name: \"isClicked\", kind: Property } }"
  is_breaking: true
  description: "property `isActive` was renamed to `isClicked` in `ButtonProps`"
  before: isActive
  after: isClicked
  has_migration_target: false
