crates/ts/tests/snapshots/baseline_diff__baseline_property_renamed_suffix_match.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: chipGroupContentRef
  qualified_name: ToolbarContextProps.chipGroupContentRef
  kind: Property
  change_type: "Renamed { from: Member { name: \"chipGroupContentRef\", kind: Property }, to: Member { name: \"labelGroupContentRef\", kind: Property } }"
  is_breaking: true
  description: "property `chipGroupContentRef` was renamed to `labelGroupContentRef` in `ToolbarContextProps`"
  before: chipGroupContentRef
  after: labelGroupContentRef
  has_migration_target: false
