crates/ts/tests/snapshots/baseline_diff__baseline_readonly_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: prop
  qualified_name: prop
  kind: Property
  change_type: ReadonlyAdded
  is_breaking: true
  description: "`prop` was made readonly"
  before: mutable
  after: readonly
  has_migration_target: false
