crates/ts/tests/snapshots/baseline_diff__baseline_real_rename_is_detected.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: isFlat
  qualified_name: packages/react-core/src/components/Card/Card.CardProps.isFlat
  kind: Property
  change_type: "Renamed { from: Symbol { kind: Property }, to: Symbol { kind: Property } }"
  is_breaking: true
  description: "Exported property `isFlat` was renamed to `isPlain`"
  before: isFlat
  after: isPlain
  has_migration_target: false
