crates/ts/tests/snapshots/baseline_diff__baseline_relocation_does_not_interfere_with_rename.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Chip
  qualified_name: pkg/dist/esm/components/Chip/Chip.Chip
  kind: Variable
  change_type: "Relocated { from: Symbol { kind: Variable }, to: Symbol { kind: Variable } }"
  is_breaking: true
  description: "variable `Chip` moved to deprecated exports"
  before: pkg/dist/esm/components/Chip/Chip.Chip
  after: pkg/dist/esm/deprecated/components/Chip/Chip.Chip
  has_migration_target: false
- symbol: OldWidget
  qualified_name: OldWidget
  kind: Function
  change_type: "Renamed { from: Symbol { kind: Function }, to: Symbol { kind: Function } }"
  is_breaking: true
  description: "Exported function `OldWidget` was renamed to `NewWidget`"
  before: OldWidget
  after: NewWidget
  has_migration_target: false
